fix : overflow 수정

--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -121,3 +121,8 @@ span{
 .feed_secondContent{
     margin-bottom: 100px;
 }
+
+.feed_container {
+    overflow-y: auto; /* 세로 스크롤을 표시하고 내용이 넘칠 때만 스크롤바를 표시 */
+    overflow-x: hidden; /* 가로 스크롤을 숨김 */
+  }
